--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 streamlit
-spacy==3.7.5
+spacy>=3.5.0,<3.6.0
 https://github.com/explosion/spacy-models/releases/download/ja_core_news_lg-3.5.0/ja_core_news_lg-3.5.0-py3-none-any.whl
